[metadata]
name = earwax
description = An audio game engine with a silly name
description-file = README.md
description-content-type = text/markdown
author = Chris Norman
author-email = chris.norman2@googlemail.com
license = MPL

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
