[metadata]
name = earwax
description = An audio game engine for fast prototyping
description-file = README.md
description-content-type = text/markdown
home-page = http://earwax.readthedocs.io/
author = Chris Norman
author-email = chris.norman2@googlemail.com
license = MPL

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
extend-ignore = E203, W503
exclude = env, .eggs, build
per-file-ignores =
    *.pyi: D100, D101, D102, D103, D107
    __init__.py: F401

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1

[entry_points]
console_scripts =
    earwax = earwax:cmd.main.cmd_main
